--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
 beautifulsoup4==4.5.3
 bs4==0.0.1
+cycler==0.10.0
+functools32==3.2.3.post2
+matplotlib==2.0.0
 numpy==1.12.1
 pandas==0.19.2
+pyparsing==2.2.0
 python-dateutil==2.6.0
 pytz==2017.2
+requests==2.13.0
 six==1.10.0
+subprocess32==3.2.7
+wheel==0.24.0
